--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,3 +1,4 @@
 // Login style
 @import './components/Login/Login';
 @import './components/Dashboard/Dashboard';
+@import './components/Dashboard/Counts';
