--- a/src/style/components/Dashboard/_Dashboard.scss
+++ b/src/style/components/Dashboard/_Dashboard.scss
@@ -5,6 +5,9 @@
         justify-content: center;
         align-items: center;
         height: 60px;
+        h3:hover {
+            cursor: pointer;
+        }
         h3 {
             font-size: 2.9rem;
             color: #fff;
@@ -16,4 +19,18 @@
         font-size: 2.5rem;
         padding-left: 2rem;
     }
+}
+
+// Dashboard content
+.counts {
+    display: flex;
+
+    &_left {
+        width: 30%;
+        height: 50%;
+    }
+}
+.counts_down {
+    display: flex;
+    align-items: flex-end;
 }
