--- a/src/style/components/Dashboard/_Dashboard.scss
+++ b/src/style/components/Dashboard/_Dashboard.scss
@@ -24,13 +24,22 @@
 // Dashboard content
 .counts {
     display: flex;
-
+    height: 70%;
+    
     &_left {
         width: 30%;
-        height: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
     }
 }
 .counts_down {
     display: flex;
     align-items: flex-end;
+    height: 30%;
+    justify-content: space-between;
+}
+
+.ant-layout-content {
+    height: 100%;
 }
