--- a/src/style/components/Dashboard/_Dashboard.scss
+++ b/src/style/components/Dashboard/_Dashboard.scss
@@ -25,17 +25,20 @@
 .counts {
     display: flex;
     height: 70%;
+    width: 100%;
     
     &_left {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        width: 30%;
     }
 }
 .counts_down {
     display: flex;
     align-items: flex-end;
     height: 30%;
+    width: 90%;
     justify-content: space-between;
 }
 
@@ -43,6 +46,9 @@
     height: 100%;
 }
 .chartjs-render-monitor {
-    height: 400px;
-    width: 700px;
+    width: 100% !important;
+    height: 100% !important;
+}
+.chart-container {
+    width: 70%;
 }
