--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -2,3 +2,4 @@
 @import './components/Login/Login';
 @import './components/Dashboard/Dashboard';
 @import './components/Dashboard/Counts';
+@import './components/Customer/Customer';
