--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -3,3 +3,4 @@
 @import './components/Dashboard/Dashboard';
 @import './components/Dashboard/Counts';
 @import './components/Customer/Customer';
+@import './components/Tickets/Tickets';
