--- a/src/style/components/Customer/_Customer.scss
+++ b/src/style/components/Customer/_Customer.scss
@@ -64,7 +64,11 @@
     position: absolute !important;
     top: 1rem;
     right: 1rem;
+    z-index: 1;
   }
   .card-container, .ant-tabs {
     height: 100%;
+  }
+  .btn-create {
+    margin: 0 70%;
   }
