--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -3,4 +3,23 @@
 @import './components/Dashboard/Dashboard';
 @import './components/Dashboard/Counts';
 @import './components/Customer/Customer';
-@import './components/Tickets/Tickets';
+@import './components/Communication/Communication';
+
+
+.view-container {
+    height: 100%;
+    position: relative;
+    padding: 2rem 0;
+  }
+    .create-new {
+      position: absolute !important;
+      top: 1rem;
+      right: 1rem;
+      z-index: 1;
+    }
+    .card-container, .ant-tabs {
+      height: 100%;
+    }
+    .btn-create {
+      margin: 0 70%;
+    }
