--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -23,3 +23,13 @@
     .btn-create {
       margin: 0 70%;
     }
+
+    //  tickets 
+    .customer-input {
+      position: relative;
+      .load-spin {
+        position: absolute;
+        top: 5px;
+        right: 25%;
+      }
+    }
