--- a/src/style/components/Dashboard/_Dashboard.scss
+++ b/src/style/components/Dashboard/_Dashboard.scss
@@ -3,13 +3,24 @@
     .logo {
         display: flex;
         justify-content: center;
+        flex-direction: column;
         align-items: center;
-        height: 60px;
-        padding: 5px;
-        .crm-logo {
-            width: 100%;
-            height: 100%;
+        height: 70px;
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.277);
+        &-title {
+            font-size: 3rem;
+            letter-spacing: 2.5px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-weight: 800;
+            color: red;
+            line-height: 20px;
+            span {
+                color: #fff;
+                font-size: 2rem;
+            }
         }
+        
         h3:hover {
             cursor: pointer;
         }
